--- a/brevets/templates/calc.html
+++ b/brevets/templates/calc.html
@@ -121,10 +121,12 @@
             // View flask_brevets.py for details.
             function calc_times(control) {
               var km = control.find("input[name='km']").val();
+              var start_time = $("input[id='begin_date']").val();
+              var max_km = $("#brevet_dist_km").val();
               var open_time_field = control.find("input[name='open']");
               var close_time_field = control.find("input[name='close']");
 
-              $.getJSON(TIME_CALC_URL, {km: km}).done(
+              $.getJSON(TIME_CALC_URL, {km: km, start_time: start_time, max_km: max_km}).done(
                 function(data) {
                    var times = data.result;
                    console.log("Got a response: ");
